--- a/RandomCodingJavaUtilities/.classpath
+++ b/RandomCodingJavaUtilities/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/lombok.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/guava-r06.jar" sourcepath="lib-src/guava-src-r06.zip">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:platform:/resource/RandomCodingJavaUtilities/lib-doc/guava-r06-javadoc.zip!/javadoc"/>
