--- a/RandomCodingJavaUtilities/build.properties
+++ b/RandomCodingJavaUtilities/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               lib/guava-r06.jar
+               lib/guava-r06.jar,\
+               lib/lombok.jar
